# trails

./: CMakeLists.txt  generate.bat  generate.zsh  readme.md
include/: array.h  framebuffer.h  grid.h  shader.h  texture.h  vertexarray.h
include/glad/: glad.h
res/: bloom.fs  blur.fs  default.fs  default.vs  map.fs  map.vs  screen.fs  subtract.fs  trail.fs  trail.vs
src/: array.c  framebuffer.c  glad.c  map.c  shader.c  texture.c  trails.c  vertexarray.c
